@@ -603,6 +603,7 @@ class Sanitizer {
 				'RFC'  => '&#82;FC',
 				'PMID' => '&#80;MID',
 				'|'    => '&#124;',
+				'__'   => '&#95;_',
 			) );
 
 			# Stupid hack
